--- a/3.html
+++ b/3.html
@@ -3,34 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script>
+        function nightDayHandler(self) {
+            var target = document.querySelector('body');
+            if (self.value === 'night') {
+                target.style.backgroundColor = 'black';
+                target.style.color = 'white';
+                self.value = 'day';
+
+                var alist = document.querySelectorAll('a');
+                var i = 0;
+                while (i < alist.length) {
+                    alist[i].style.color = 'powderblue';
+                    i += 1;
+                }
+            } else {
+                target.style.backgroundColor = 'white';
+                target.style.color = 'black';
+                self.value = 'night';
+                var alist = document.querySelectorAll('a');
+                var i = 0;
+                while (i < alist.length) {
+                    alist[i].style.color = 'blue';
+                    i += 1
+                }
+            }
+        }
+    </script>
 </head>
-<body>
+    <body>
     <h1><a href="index.html">WEB</a></h1>
     <input type="button" value="night" onclick="
-    var target = document.querySelector('body');
-    if(this.value === 'night'){
-        target.style.backgroundColor = 'black';
-        target.style.color = 'white';
-        this.value='day';
-
-        var alist = document.querySelectorAll('a');
-        var i=0;
-        while(i < alist.length){
-            alist[i].style.color='powderblue';
-            i+=1
-        }
-    }else{
-        target.style.backgroundColor = 'white';
-        target.style.color = 'black';
-        this.value='night';
-        var alist = document.querySelectorAll('a');
-        var i=0;
-        while(i < alist.length){
-            alist[i].style.color='blue';
-            i+=1
-        }
-    }
-    ">
+            nightDayHandler(this);
+        ">
+    <input type="button" value="night" onclick="
+            nightDayHandler(this);
+        ">
     <ol>
         <li><a href="3.html">HTML</a></li>
         <li><a href="2.html">CSS</a></li>
