--- a/3.html
+++ b/3.html
@@ -4,34 +4,41 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script>
-        function LinksSetColor(color) {
-            var alist = document.querySelectorAll('a');
-            var i = 0;
-            while (i < alist.length) {
-                alist[i].style.color = color;
-                i += 1;
+        var Links = {
+            SetColor: function (color) {
+                var alist = document.querySelectorAll('a');
+                var i = 0;
+                while (i < alist.length) {
+                    alist[i].style.color = color;
+                    i += 1;
+                }
             }
         }
-        function BodySetColor(color){
-            document.querySelector('body').style.color = color;
-        }
-        function BodySetBackgroundColor(color){
-            document.querySelector('body').style.backgroundColor = color;
-        }
+
+
+        var Body ={
+            SetColor:function (color){
+                document.querySelector('body').style.color = color;
+            },
+            SetBackgroundColor: function (color) {
+                document.querySelector('body').style.backgroundColor = color;
+            }
+        };
+
         function nightDayHandler(self) {
             var target = document.querySelector('body');
             if (self.value === 'night') {
-                BodySetBackgroundColor('black');
-                BodySetColor('white');
+                Body.SetBackgroundColor('black');
+                Body.SetColor('white');
                 self.value = 'day';
 
-                LinksSetColor('powderblue');
+                Links.SetColor('powderblue');
             } else {
-                BodySetBackgroundColor('white');
-                BodySetColor('black');
+                Body.SetBackgroundColor('white');
+                Body.SetColor('black');
                 self.value = 'night';
 
-                LinksSetColor('blue');
+                Links.SetColor('blue');
             }
         }
     </script>
