--- a/2.html
+++ b/2.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>WEB1 - CSS</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <meta charset="utf-8">
     <script src="colors.js"></script>
 </head>
